force-app/main/default/objects/Restaurant__c/Restaurant__c.object-meta.xml
<CustomObject>
    <label>Restaurant</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Restaurant Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restaurants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>