force-app/main/default/objects/Restaurant__c/fields/Lunch_dinner__c.field-meta.xml
<CustomField>
    <fullName>Lunch_dinner__c</fullName>
    <description>List of Vaues ‘Lunch/dinner’</description>
    <label>Lunch/dinner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>