force-app/main/default/objects/Restaurant__c/fields/Restaurant_Name__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Name__c</fullName>
    <label>Restaurant Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>