force-app/main/default/objects/Restaurant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Being organised</fullName>
            </value>
            <value>
                <fullName>Organised</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Attented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>