force-app/main/default/objects/Restaurant__c/recordTypes/Business_Restaurant.recordType-meta.xml
<RecordType>
    <fullName>Business_Restaurant</fullName>
    <active>true</active>
    <label>Business Restaurant</label>
</RecordType>