force-app/main/default/objects/Restaurant__c/validationRules/VR_RestaurantName.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_RestaurantName</fullName>
    <active>true</active>
    <description>Restaurant Name is Required !!</description>
    <errorConditionFormula>ISBLANK(Restaurant_Name__c)</errorConditionFormula>
    <errorDisplayField>Restaurant_Name__c</errorDisplayField>
    <errorMessage>&quot;Restaurant Name &quot; is required.</errorMessage>
</ValidationRule>